--- a/package.json
+++ b/package.json
@@ -3,17 +3,54 @@
   "version": "1.0.0",
   "description": "Serverless webpack example using Babel with offline testing",
   "scripts": {
+    "flow": "flow",
     "start": "serverless offline start"
   },
+  "babel": {
+    "presets": [
+      "env",
+      "react",
+      "stage-0",
+      "flow"
+    ],
+    "plugins": [
+      "transform-runtime",
+      "lodash"
+    ],
+    "env": {
+      "production": {
+        "plugins": [
+          "transform-remove-console"
+        ]
+      }
+    }
+  },
+  "keywords": [
+    "starter",
+    "boilerpate",
+    "serverless",
+    "offline",
+    "aws",
+    "lambda",
+    "flow",
+    "webpack"
+  ],
   "author": "Anupol Anekpattanakij <a.anekpattanakij@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-lodash-fp": "^2.1.3",
+    "flow-bin": "0.60.1",
     "serverless": "^1.18.0",
     "serverless-offline": "^3.15.1",
     "serverless-webpack": "^4.3.0",
