--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "author": "Anupol Anekpattanakij <a.anekpattanakij@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
