--- a/serverless.yml
+++ b/serverless.yml
@@ -77,7 +77,7 @@ custom:
 
 functions:
   bnkService:
-    handler: src/bnkService.getMembers
+    handler: src/bnkService.bnkMember
     events:
       - http:
           method: get
