--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "plugins": ["transform-runtime"],
-    "presets": ["es2015", "stage-0","flow"]
-  }
+    "presets": ["env"],
+    "plugins": ["transform-flow-strip-types"]
+}
