--- a/package.json
+++ b/package.json
@@ -2,29 +2,7 @@
   "name": "serverless-offlice-webpack-babel-example",
   "version": "1.0.0",
   "description": "Serverless webpack example using Babel with offline testing",
-  "scripts": {
-    "flow": "flow",
-    "start": "serverless offline start"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react",
-      "stage-0",
-      "flow"
-    ],
-    "plugins": [
-      "transform-runtime",
-      "lodash"
-    ],
-    "env": {
-      "production": {
-        "plugins": [
-          "transform-remove-console"
-        ]
-      }
-    }
-  },
+  "main": "src/bnkService.js",
   "keywords": [
     "starter",
     "boilerpate",
@@ -37,28 +15,31 @@
   ],
   "author": "Anupol Anekpattanakij <a.anekpattanakij@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-lodash-fp": "^2.1.3",
-    "flow-bin": "0.60.1",
-    "serverless": "^1.18.0",
-    "serverless-offline": "^3.15.1",
-    "serverless-webpack": "^4.3.0",
-    "webpack": "^3.3.0",
-    "webpack-node-externals": "^1.6.0"
+  "scripts": {
+    "start": "serverless offline start"
   },
   "dependencies": {
-    "babel-runtime": "^6.22.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-flowtype": "^2.29.2",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-lodash-fp": "^2.1.3",
+    "eslint-plugin-mocha": "^4.8.0",
+    "eslint-plugin-react": "^7.6.1",
+    "install": "^0.10.4",
+    "mocha": "^5.0.0",
+    "serverless-webpack": "^4.3.0",
+    "serverless-offline": "^3.11.0",
+    "webpack": "^3.11.0",
+    "webpack-dotenv-plugin": "^2.0.2",
+    "webpack-node-externals": "^1.5.4"
   }
 }
